<resources>
    <string name="app_name">DonationDatabase</string>

    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="Add_New">Add New</string>
    <string name="edit">Edit Donator</string>
    <string name="delete">Delete Donator</string>
    <string name="title_activity_display_donator">DisplayDonator</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="street">Street</string>
    <string name="country">City/State/Zip</string>
    <string name="save">Save Donator</string>
    <string name="deleteDonator">Are you sure, you want to delete it.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="new_button">New donator</string>
    <string name="donate">donate</string>
    <string name="back">back</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="amountDonate">donateAmount</string>
    <string name="saveAmount">Submit</string>
    <string name="amount">Amount</string>
    <string name="date">Date</string>
    <string name="donationHistory">Donation History</string>
</resources>
