<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".DisplayDonator" >


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="370dp"
        >

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="308dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="82dp"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:inputType="text"></EditText>

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="308dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextStreet"
            android:layout_alignLeft="@+id/editTextStreet"
            android:layout_marginTop="22dp"
            android:ems="10"
            android:inputType="textEmailAddress" />


        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/editTextName"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="17dp"
            android:layout_marginBottom="0dp"
            android:text="@string/name"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        <requestFocus />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/editTextEmail"
            android:layout_alignLeft="@+id/textView1"
            android:text="@string/email"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/editTextPhone"
            android:layout_alignLeft="@+id/textView1"
            android:text="@string/phone"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/editTextEmail"
            android:layout_alignLeft="@+id/textView5"
            android:text="@string/street"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/editTextCity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextEmail"
            android:layout_alignRight="@+id/editTextName"
            android:layout_marginTop="17dp"
            android:ems="10"
            android:inputType="text" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="133dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/editTextCity"
            android:layout_alignBottom="@+id/editTextCity"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="17dp"
            android:layout_marginRight="-67dp"
            android:layout_marginBottom="-2dp"
            android:layout_toLeftOf="@+id/editTextEmail"
            android:text="@string/country"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/editTextStreet"
            android:layout_width="309dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextPhone"
            android:layout_alignLeft="@+id/editTextName"
            android:ems="10"
            android:inputType="text">
        </EditText>

        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="310dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextName"
            android:layout_alignLeft="@+id/editTextStreet"
            android:ems="10"
            android:inputType="phone|text" />

        <Button
            android:id="@+id/button_donate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView3"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="17dp"
            android:layout_marginLeft="17dp"
            android:layout_marginTop="16dp"
            android:text="@string/donate" />

        <Button
            android:id="@+id/button_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="0dp"
            android:layout_toStartOf="@+id/button1"
            android:layout_toLeftOf="@+id/button1"
            android:text="@string/edit" />

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:layout_alignParentBottom="true"
            android:layout_alignRight="@+id/editTextCity"
            android:layout_alignEnd="@+id/editTextCity"
            android:layout_below="@+id/editTextCity" />

        <Button
            android:id="@+id/button_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:layout_alignParentBottom="true"
            android:layout_alignRight="@+id/button1"
            android:layout_alignEnd="@+id/button1"
            />

        <Button
            android:id="@+id/button_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="17dp"
            android:layout_marginLeft="17dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="18dp"
            android:layout_marginBottom="0dp"
            android:layout_toStartOf="@+id/button_edit"
            android:layout_toLeftOf="@+id/button_edit"
            android:text="@string/back" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextCity"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@+id/button_donate"
            android:layout_toRightOf="@+id/button_donate"
            android:fontFamily="sans-serif-smallcaps"
            android:text="Total Amount Donated(AUD): $1000"
            android:textSize="18sp" />

    </RelativeLayout>

</ScrollView>