<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".DonateActivity" >


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        >


        <TextView
            android:id="@+id/welcomeNote"
            android:layout_width="323dp"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="23dp"
            android:layout_marginEnd="38dp"
            android:layout_marginRight="38dp"
            android:layout_marginBottom="5dp"
            android:text="Thank you for your contribution"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="238dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="157dp"
            android:layout_marginTop="106dp"
            android:ems="10"
            android:inputType="text"></EditText>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/editTextName"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="19dp"
            android:layout_marginBottom="5dp"
            android:text="@string/amount"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <requestFocus />

        <Button
            android:id="@+id/button_back"
            android:layout_width="93dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="21dp"
            android:layout_marginLeft="21dp"
            android:layout_marginEnd="158dp"
            android:layout_marginRight="158dp"
            android:layout_marginBottom="8dp"
            android:layout_toStartOf="@+id/button1"
            android:layout_toLeftOf="@+id/button1"
            android:text="@string/back" />

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="31dp"
            android:layout_marginRight="31dp"
            android:layout_marginBottom="-2dp"
            android:text="@string/saveAmount" />


    </RelativeLayout>

</ScrollView>